crates/swc_ecma_parser/tests/comments/exprs/call/simple/input.js.stderr

  > Trailing (hi)

Error: 
  > post: 9
   ,-[$DIR/tests/comments/exprs/call/simple/input.js:2:1]
 2 | test(123/*post: 9*/, 456/*post: 10*/);
   :         ^
   `----

  > Trailing (hi)

Error: 
  > post: 10
   ,-[$DIR/tests/comments/exprs/call/simple/input.js:2:1]
 2 | test(123/*post: 9*/, 456/*post: 10*/);
   :                         ^
   `----
