crates/swc_ecma_parser/tests/comments/exprs/call/simple/input.js
test(123/*post: 9*/, 456/*post: 10*/);
